overflow fix

--- a/css/forside.css
+++ b/css/forside.css
@@ -49,6 +49,7 @@ header {
 
 .forside img {
     width: 100%;
+    overflow-x: hidden;
 }
 
 .abningstider {
@@ -85,6 +86,7 @@ header {
 
 .croissant img {
     width: 100%;
+    overflow-x: hidden;
 }
 
 /* NAVBAR */
@@ -149,8 +151,10 @@ footer {
     display: flex;
     flex-direction: row;
     border-top: 2px solid var(--secondary-color);
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
+    overflow-x: hidden;
+    gap: 50px;
 }
 
 .logo-footer {
@@ -166,11 +170,11 @@ footer {
     align-items: center;
     color: var(--secondary-color);
     font-family: "EB Garamond", serif;
-    margin-left: 500px;
 }
 
 .adresse a {
     text-decoration: none;
+    text-align: center;
 }
 
 .social-media {
@@ -188,7 +192,7 @@ footer {
     display: inline-block;
 }
 
-@media(max-width:991px) {
+@media(max-width:600px) {
 
     header {
         padding: 20px;
@@ -236,20 +240,3 @@ footer {
 
 }
 
-
-@media only screen and (max-width: 600px) { 
-
-
-    header {
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .logo {
-        width: 40px;
-    }
-
-
-
-}
